--- a/triversity-vue-app/index.html
+++ b/triversity-vue-app/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>triversity-vue-app</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Triversity</title>
     <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="icon" href="./static/favicon.png" type="image/x-icon">
   </head>
   <body>
     <div id="app"></div>
