--- a/triversity-vue-app/index.html
+++ b/triversity-vue-app/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Triversity</title>
     <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="icon" href="./static/favicon.png" type="image/x-icon">
+    <link rel="icon" href="./static/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div id="app"></div>
